# SemEval52026

./: .gitignore  benchmark_bert.py  data_processing.py  data_structs.py  distillroberta_lora_sweep.yaml  eval.py  finetune_bert.py  finetuning.py  finetuning_unsloth.py  load_data.py  main.py  metrics.py  model.py  models.py  nltk_tag_script.py  pyproject.toml  start.sh  torch_model.py  train.py
configs/: finetuning.yaml  pretraining_defx_bert.yaml  pretraining_defx_deberta.yaml  pretraining_defx_distilbert.yaml  pretraining_defx_roberta.yaml  sweepconfig.yaml  synonym_cfg.yaml
configs/bert-baseline/: eval.yaml
configs/cce-bert/: eval.yaml
configs/cce-distilroberta/: eval.yaml  finetuning.yaml  ft_lora_sweep.yaml
configs/cce-minilm/: eval.yaml  finetuning.yaml  ft_lora_sweep.yaml
configs/cce-mpnet/: eval.yaml  finetuning.yaml  ft_lora_sweep.yaml
configs/cce-roberta/: eval.yaml  finetuning.yaml  ft_lora_sweep.yaml
configs/dxa-bert/: eval.yaml  pretraining.yaml
configs/dxa-deberta/: eval.yaml  finetuning.yaml  pretraining.yaml
configs/dxa-distilbert/: eval.yaml  finetuning.yaml  pretraining.yaml
configs/dxa_bert/: eval.yaml  finetuning.yaml  pretraining.yaml
configs/dxa_deberta/: eval.yaml  finetuning.yaml  pretraining.yaml
configs/dxa_distilbert/: eval.yaml  finetuning.yaml  pretraining.yaml
data/: dev.json  dev_augmented.json  dev_ft.json  dev_mlm.json  system_prompt.jsonl  test.json  train.json  train_ft.json  treebank_tagset.tsv
results/: predictions.jsonl
shells/: qwen.sh  sweep.sh
src/: model.py  ollama_model.py  parser.py
(+39 files in other folders)
