[project]
name = "semeval52026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.6.1",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "transformers>=4.57.3",
    "trl>=0.24.0",
    "unsloth>=2025.12.5",
    "vllm>=0.11.2",
]
